// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfinitScroller should render correctly 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ConnectFunction
    articles={
      Object {
        "publications": Array [
          Object {
            "author": Object {
              "firstName": "sample firstname",
              "image": "sample_user_image.png",
              "lastName": "sample lastName",
              "username": "sampleusername",
            },
            "description": "a very long sample description testing, text content, which is not correct grammatically",
            "imageThumbnail": "the_url_to_image_thumbnail.png",
            "slug": "sample-slug-testing",
            "title": "sample title testing",
          },
        ],
      }
    }
    error={Object {}}
    fetchArticlePagination={[MockFunction]}
    isFetching={false}
  >
    <InfinitScroller
      articles={
        Object {
          "publications": Array [
            Object {
              "author": Object {
                "firstName": "sample firstname",
                "image": "sample_user_image.png",
                "lastName": "sample lastName",
                "username": "sampleusername",
              },
              "description": "a very long sample description testing, text content, which is not correct grammatically",
              "imageThumbnail": "the_url_to_image_thumbnail.png",
              "slug": "sample-slug-testing",
              "title": "sample title testing",
            },
          ],
        }
      }
      error={Object {}}
      fetchArticlePagination={[Function]}
      isFetching={false}
    >
      <div
        className="articles"
      >
        <Article
          article={
            Object {
              "author": Object {
                "firstName": "sample firstname",
                "image": "sample_user_image.png",
                "lastName": "sample lastName",
                "username": "sampleusername",
              },
              "description": "a very long sample description testing, text content, which is not correct grammatically",
              "imageThumbnail": "the_url_to_image_thumbnail.png",
              "slug": "sample-slug-testing",
              "title": "sample title testing",
            }
          }
          key="0"
        >
          <div
            className="article"
          >
            <div
              className="thumbnail"
            >
              <a
                href="sample-slug-testing"
              >
                <img
                  src="the_url_to_image_thumbnail.png"
                />
              </a>
            </div>
            <div
              className="description"
            >
              <a
                href="sample-slug-testing"
              >
                <Title
                  className="ui header"
                  content="sample title testing"
                >
                  <h1
                    className="title ui header"
                  >
                    sample title testing
                  </h1>
                </Title>
              </a>
              <p>
                a very long sample description testing, text content, which is not correct grammatically
              </p>
            </div>
          </div>
        </Article>
      </div>
    </InfinitScroller>
  </ConnectFunction>
</Provider>
`;

exports[`InfinitScroller should render correctly 2`] = `
<div
  className="articles"
>
  <Article
    article={
      Object {
        "author": Object {
          "firstName": "sample firstname",
          "image": "sample_user_image.png",
          "lastName": "sample lastName",
          "username": "sampleusername",
        },
        "description": "a very long sample description testing, text content, which is not correct grammatically",
        "imageThumbnail": "the_url_to_image_thumbnail.png",
        "slug": "sample-slug-testing",
        "title": "sample title testing",
      }
    }
    key="0"
  >
    <div
      className="article"
    >
      <div
        className="thumbnail"
      >
        <a
          href="sample-slug-testing"
        >
          <img
            src="the_url_to_image_thumbnail.png"
          />
        </a>
      </div>
      <div
        className="description"
      >
        <a
          href="sample-slug-testing"
        >
          <Title
            className="ui header"
            content="sample title testing"
          >
            <h1
              className="title ui header"
            >
              sample title testing
            </h1>
          </Title>
        </a>
        <p>
          a very long sample description testing, text content, which is not correct grammatically
        </p>
      </div>
    </div>
  </Article>
</div>
`;
